# walnut

./: .gitignore  Makefile  README.md  pyproject.toml  roadmap.json  setup  setup.py  walnut-plan-and-technical-design.md
_template/: problem.json  reference.py  starter.py
docs/: QUICKSTART.md  REPO_GUIDE.md
docs/cheatsheets/: 1-d-dynamic-programming.md  2-d-dynamic-programming.md  advanced-graphs.md  arrays-and-hashing.md  backtracking.md  binary-search.md  bit-manipulation.md  complexity.md  graphs.md  greedy.md  heap-priority-queue.md  intervals.md  linked-list.md  math-and-geometry.md  python-stdlib.md  sliding-window.md  stack.md  trees.md  tries.md  two-pointers.md
problems/01-arrays-and-hashing/01-contains-duplicate/: README.md  fixtures.py  problem.json  reference.py  starter.py
problems/01-arrays-and-hashing/02-valid-anagram/: README.md  fixtures.py  problem.json  starter.py
problems/01-arrays-and-hashing/03-two-sum/: README.md  fixtures.py  problem.json  reference.py
problems/01-arrays-and-hashing/04-group-anagrams/: README.md  fixtures.py  problem.json  reference.py  starter.py
problems/01-arrays-and-hashing/05-top-k-frequent-elements/: README.md  fixtures.py  problem.json  reference.py  starter.py
problems/01-arrays-and-hashing/06-encode-and-decode-strings/: README.md  fixtures.py  problem.json  reference.py  starter.py
tests/: test_neetcode.py  test_progress.py  test_repo_cli.py  test_runner.py
tools/: seed_content.py
walnut/: __init__.py  cli.py  files.py  format.py  neetcode.py  progress.py  repo.py  runner.py  tui.py
(+443 files in other folders)
